@@ -64,6 +64,7 @@ public class Molecule3D extends StereoMolecule implements Comparable<Molecule3D>
 	private int[] atomFlags;
 	private Object[][] infos;
 	private double[] partialCharges;
+	private boolean isCovalentLigand;
 
 	//Molecule properties (calculated during the first call at getRings)
 	//private List<Integer>[] mAtomToRings = null;
@@ -250,8 +251,14 @@ public class Molecule3D extends StereoMolecule implements Comparable<Molecule3D>
 		return (String) infos[atm][INFO_AMINO];
 	}
 	
+	public boolean isCovalentLigand() {
+		return isCovalentLigand;
+	}
 
-	
+	public void setCovalentLigand(boolean b) {
+		isCovalentLigand = b;
+	}
+
 	public final double getAtomBfactor(int atm) {
 		return (double) infos[atm][INFO_BFACTOR];
 	}
@@ -277,7 +284,7 @@ public class Molecule3D extends StereoMolecule implements Comparable<Molecule3D>
 		Coordinates [] coords = new Coordinates[getAtoms()];
 
 		for (int i = 0; i < getAtoms(); i++) {
-			coords[i]=getCoordinates(i);
+			coords[i]= getAtomCoordinates(i);
 		}
 
 		return coords;
@@ -381,11 +388,11 @@ public class Molecule3D extends StereoMolecule implements Comparable<Molecule3D>
 		}*/
 
 			if (o instanceof String)
-				newObject = new String((String)o);
+				newObject = o;
 			else if(o instanceof Integer)
-				newObject = new Integer((Integer)o);
+				newObject = Integer.valueOf((Integer)o);
 			else if(o instanceof Double)
-				newObject = new Double((Double)o);
+				newObject = Double.valueOf((Double)o);
 			else {
 				System.out.println("ERROR: unexpected Object type. Add support for new type: "+o);
 			}
